<resources>
    <string name="app_name" translatable="false">MareeMentions</string>
    <string name="button_play">Play Game</string>
    <string name="high_score">High Scores</string>
    <string name="button_settings">Settings</string>
    <string name="language">Language:</string>
    <string name="menu_theme">Theme:</string>
    <string name="resume_button">Resume</string>
    <string name="dialog_name_hint">Enter your name</string>
    <string name="next_stage_message">Correct! \uD83D\uDE42</string>
    <string name="button_resume">Resume</string>
    <string name="switch_sound">Sound</string>
    <string name="exit_game">Exit</string>
    <string name="play_again">Play again?</string>
    <string name="pause_string">Paused</string>
    <string name="flash_speed">Fast Flash Speed</string>
    <string name="toggle_sound_on">Sound On</string>
    <string name="toggle_sound_off">Sound off</string>
    <string name="save_settings">Save Settings</string>
    <string name="settings_saved_toast">Settings Saved.</string>
    <string name="save_high_score">Save High Score</string>
    <string name="high_score_saved">High Score saved.</string>
    <string name="high_scores_not_found">Could not find high scores....</string>
    <string name="button_not_found_somehow">How.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_message_message">Would you like to message someone about this score?</string>
    <string name="through_to_messages">Putting you through to your messages....</string>
</resources>
