<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

    <TextView
            android:text="@string/button_settings"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:textAlignment="center" android:textSize="48sp" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/toggleSoundButton" app:layout_constraintVertical_bias="0.39"/>
    <ToggleButton
            android:text="ToggleButton"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/toggleSoundButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:textOff="@string/toggle_sound_off"
            android:textOn="@string/toggle_sound_on" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:textSize="20sp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/speedSwitch"/>
    <Button
            android:text="@string/save_settings"
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp" app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="saveSettingsAndClose" android:textSize="20sp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/speedSwitch"/>
    <Switch
            android:text="@string/flash_speed"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/speedSwitch" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/toggleSoundButton" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/button" android:textSize="20sp"/>
</android.support.constraint.ConstraintLayout>