<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".MainMenuActivity">

    <TextView
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="67dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            android:layout_marginStart="16dp" android:id="@+id/appName" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.488"
            android:textSize="40sp" android:fontFamily="casual" android:textAlignment="center"
            android:textStyle="bold" android:textColor="@color/colorText"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintVertical_chainStyle="spread_inside"/>
    <Button
            android:text="@string/button_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_play" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/button_high_scores"
            android:fontFamily="casual" android:textSize="32sp" android:onClick="playGame"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <Button
            android:text="@string/high_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button_high_scores"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_play" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/button_settings"
            android:fontFamily="casual" android:textSize="32sp" android:onClick="openHighScores"/>
    <Button
            android:text="@string/button_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/button_settings"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintTop_toBottomOf="@+id/button_high_scores" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="casual" android:textSize="32sp" android:onClick="openSettings"/>
    <ImageView
            android:src="@drawable/colordiamond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/appName" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/button_play" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:srcCompat="@drawable/colordiamond"/>
</android.support.constraint.ConstraintLayout>